--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "fuse.js": "^7.0.0",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
